@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 """Release data for the IPython project.
 
-$Id: Release.py 1000 2006-01-10 08:06:04Z fperez $"""
+$Id: Release.py 1002 2006-01-11 22:18:29Z fperez $"""
 
 #*****************************************************************************
 #       Copyright (C) 2001-2006 Fernando Perez <fperez@colorado.edu>
@@ -22,9 +22,9 @@ name = 'ipython'
 # because bdist_rpm does not accept dashes (an RPM) convention, and
 # bdist_deb does not accept underscores (a Debian convention).
 
-version = '0.7.0'
+version = '0.7.1.svn'
 
-revision = '$Revision: 1000 $'
+revision = '$Revision: 1002 $'
 
 description = "An enhanced interactive Python shell."
 
